--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: "{{ .Release.Name }}"
-  namespace: "{{ .Release.Namespace }}"
   labels:
     {{- include "shellinabox.labels" . | indent 4 }}
 spec:
@@ -17,14 +16,17 @@ spec:
     spec:
       {{- if .Values.nodeSelector }}
       nodeSelector:
-        {{ .Values.nodeSelector | toYaml | nindent 8 }}
+        {{- .Values.nodeSelector | toYaml | nindent 8 }}
       {{- end }}
       {{- if .Values.nodeSelector }}
       tolerations:
-        {{ .Values.tolerations | toYaml | nindent 8 }}
+        {{- .Values.tolerations | toYaml | nindent 8 }}
       {{- end }}
       containers:
         - name: shellinabox
           image: {{ .Values.image }}:{{ .Values.tag }}
+          envFrom:
+            - configMapRef:
+                name: {{ .Release.Name }}
           ports:
             - containerPort: 4200
