--- a/templates/ingress.yml
+++ b/templates/ingress.yml
@@ -3,12 +3,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: "{{ .Release.Name }}"
-  namespace: "{{ .Release.Namespace }}"
   labels:
     {{- include "shellinabox.labels" . | nindent 4 }}
   {{- if .Values.ingress.annotations }}
   annotations:
-    {{ .Values.ingress.annotations | toYaml | nindent 4 }}
+    {{- .Values.ingress.annotations | toYaml | nindent 4 }}
   {{- end }}
 spec:
 {{- if .Values.ingress.tls }}
