--- a/templates/configmap.yml
+++ b/templates/configmap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "{{ .Release.Name }}"
+  name: {{ include "shellinabox.fullname" . }}
   labels:
     {{- include "shellinabox.labels" . | indent 4 }}
 data:
