--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "{{ .Release.Name }}"
+  name: {{ include "shellinabox.fullname" . }}
   labels:
     {{- include "shellinabox.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app: "{{ .Release.Name }}"
+      app: {{ include "shellinabox.fullname" . }}
   template:
     metadata:
       labels:
@@ -25,8 +25,9 @@ spec:
       containers:
         - name: shellinabox
           image: {{ .Values.image }}:{{ .Values.tag }}
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
           envFrom:
             - configMapRef:
-                name: {{ .Release.Name }}
+                name: {{ include "shellinabox.fullname" . }}
           ports:
             - containerPort: 4200
