--- a/templates/service.yml
+++ b/templates/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Release.Name }}"
+  name: {{ include "shellinabox.fullname" . }}
   labels:
     {{- include "shellinabox.labels" . | indent 4 }}
 spec:
   selector:
-    app: "{{ .Release.Name }}"
+    app: {{ include "shellinabox.fullname" . }}
   ports:
     - protocol: TCP
       port: 4200
